--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -20,6 +20,10 @@
         justify-content: space-around;
         padding: 2rem;
         margin: 2rem ;
+        .btn{
+            margin: 20px;
+            padding: 15px 30px;
+        }
     }
     h1{
         font-size: 4rem;
