--- a/src/index.scss
+++ b/src/index.scss
@@ -6,3 +6,17 @@ body {
   font-family:$font;
   
 }
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background:#242424;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
