--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -17,4 +17,26 @@
             outline: none;
         }
     }
+    .social-icons{
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        margin: 2rem auto;
+        .instagram,.facebook,.youtube{
+            font-size:2.5rem;
+            padding: 0.5rem;
+            margin: 0 1rem;
+            cursor: pointer;
+        }
+    }
+    .footer-info{
+        display: flex;
+        align-items: center;
+        margin: 2rem 0;
+        padding: 1rem;
+        justify-content:space-between;
+        width: 100%;
+        font-size: 1.5rem;
+        
+    }
 }
