--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,7 +6,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    // background-image: url(../../../public/images/img-home.jpg);
+    background-image: url(../../../public/images/img-home.jpg);
     video{
         object-fit: cover;
         width: 100%;
