--- a/src/App.scss
+++ b/src/App.scss
@@ -1,2 +1,9 @@
 .App{
+    background-color: #242424;
+    width: 100%;
+    height: 100vh;
+    .loading{
+        color: white;
+        font-size: 1.5rem;
+    }
 }
